try prevent scroll on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -103,3 +103,6 @@ a {
 .widthlimited {
 	max-width: 100%;
 }
+.fixed {
+	position: fixed;
+}
